--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
